--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,12 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                </configuration>
+		    </configuration>
             </plugin>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.2</version>
+	   </plugin>   
         </plugins>
     </build>
 	
